# dotfiles

./: .gitignore  .gitmodules  .spacemacs  AGENTS.md  CLAUDE.md  NOTES.org  PROJECT_NOTES.org  README.org  TODO  TODO.org  bash_profile  bashrc  bindings-migration.org  brew_installs.sh  install_steps.org  pre-network-fixes.sh  setup_symlinks.sh  ssh_config  starship.toml
Code/: link.sh
X/: Xresources  capstoESCmap  xbindkeysrc  xinitrc
applemusic-mcp/: AuthKey_Z96WBAA3HX.p8  auth.html  config.json  developer_token.json  music_user_token.json
arch/: 30-touchpad.conf  install.sh
awesome/: rc.lua
bash/: aliases  apply.sh  bash_profile  bashrc  bootstrap.sh  colorpallet.sh  link_configs.sh
bootstrap/: git_init.sh  ssh_init.sh  symlink_configs.sh
brew/: Brewfile
claude/: CLAUDE.md  settings.json  settings.local.json  statusline.sh
cmux/: README.md  cmux.json  theme-notes.md
dark-mode-switcher/: .gitignore  Makefile  com.jeff.darknotify.plist  switch_theme  switch_theme.go  switch_theme.sh
desktop_environment/: i3_config  install.sh  rotate_screen.sh  xinitrc
docs/: kitty-quick-terminal-setup.md  nvim-bookmarks.md  pi-vim-support.md  warp-like-terminal.md  workspace-shell-repo-design.md
doom/: README.org  bindings.el  config.el  custom.el  init.el  packages.el  refresh_reload_restart.scpt  refresh_reload_restart.sh
emacs/: .gitignore  ai.el  apply.sh  build-native-comp.sh  compilation.org  emacs-profiles.el  fresh-install.sh  init.el  install-emacs.sh  install-fonts.sh  installer.sh  link-configs.sh  (+1 more)
i3/: config  (+5 more)
scripts/aws_console/: README.md  Taskfile.yml  aws_console.py  chrome_gc.py  pyproject.toml
scripts/awsc/: README.md  Taskfile.yml  aws_console.py  chrome_gc.py  pyproject.toml
scripts/clear_empty_spaces/: README.md  main.py  pyproject.toml
(+877 files in other folders)
