[tool.poetry]
name = "aws-console"
version = "0.1.0"
description = ""
authors = ["Jeff_Parsons <JParsons@discoveryed.com>"]
readme = "README.md"

[tool.poetry.scripts]
aws_console = "aws_console:main"

[tool.poetry.dependencies]
python = "^3.12"
boto3 = "^1.34.125"
requests = "^2.32.3"


[tool.poetry.group.dev.dependencies]
shiv = "^1.0.6"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
